Add hamburguer menu responsive

--- a/undersound/style.css
+++ b/undersound/style.css
@@ -103,6 +103,25 @@ header nav {
 .navbar {
     padding: 0;
 }
+.sidebar {
+    display: none;
+}
+.sidebar a i {
+    font-size: 3rem;
+}
+.offcanvas-start {
+    padding: 2rem;
+    background-color: var(--bg-beige);
+}
+.offcanvas-title {
+    font-size: 2.5rem;
+    font-family: var(--playfair);
+    color: var(--purple);
+}
+.offcanvas-body ul li a {
+    font-size: 2rem;
+    color: black;
+}
 .navbar .container {
     position: relative;
 }
@@ -792,6 +811,11 @@ footer .socials-link i {
     }
     .hero-content {
         width: 90%;
+    }
+}
+@media screen and (width <= 768px) {
+    .sidebar {
+        display: flex;
     }
 }
 @media screen and (width <= 600px) {
