--- a/undersound/style.css
+++ b/undersound/style.css
@@ -38,7 +38,7 @@ html {
 
 body {
     font-family: inherit;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
 h1, h2, h3, h4 {
@@ -268,10 +268,13 @@ header nav {
 }
 
 /* INFORMATION SECTION */
+.info .container {
+    position: relative;
+}
 .info {
     background-color: var(--bg-pink);
-    padding: 5rem 0 8rem;
-    position: relative;
+    padding: 8rem 0 18rem;
+    /* position: relative; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -281,33 +284,39 @@ header nav {
     color: var(--purple);
 }
 .section-title {
-    font-size: 3rem;
+    font-size: 4rem;
     margin: 0;
 }
 .info-text {
     padding: 3rem;
-    width: 60%;
+    width: 65%;
     margin: 0 auto;
 }
 .info-card__container {
     position: absolute;
-    bottom: 0;
+    bottom: -50%;
     left: 50%;
     transform: translate(-50%, 50%);
-    padding: 0 5rem;
+    padding: 0 1rem;
     width: 100%;
-    /* margin: 0 auto; */
-    
+    flex-wrap: wrap;
 }
 .info-card {
+    flex: 1;
     position: relative;
     text-align: left;
-    padding: 1rem 1rem 1rem 10rem;
+    padding: 3rem 2rem 3rem 15rem;
     border: 1px solid black;
     border-radius: 20px;
     color: black;
     flex: 1;
-    max-width: 50rem;
+    /* max-width: 50rem; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1.3rem;
+    min-width: 18rem;
+
 }
 .info-card:first-of-type {
     background-color: var(--orange);
@@ -319,14 +328,18 @@ header nav {
     background-color: var(--green);
 }
 .info-card__img {
-    width: 12rem;
+    width: 18rem;
     position: absolute;
     left: -2rem;
     bottom: 0;
     z-index: 1;
+    transition: left 1s ease-in;
+}
+.info-card__title {
+    font-size: 2rem;
 }
 .info-card:nth-of-type(2) .info-card__img {
-    width: 14rem;
+    width: 22rem;
 }
 .info-card__title,
 .info-card__text,
@@ -725,6 +738,20 @@ footer .socials-link i {
 
 }
 
+@media screen and (width <= 1340px) {
+    .info-card__img {
+        left: -200rem;
+    }
+    .info-text {
+        width: calc(100% - 1rem) ;
+    }
+    .info-card {
+        padding: 2rem;
+        text-align: center;
+        align-items: center;
+    }
+}
+
 @media screen and (width <= 1050px) {
     header {
         overflow: hidden;
@@ -764,6 +791,7 @@ footer .socials-link i {
         gap: 4rem;
     }
 }
+
 
 @media screen and (width <= 920px) {
     
@@ -818,6 +846,18 @@ footer .socials-link i {
         display: flex;
     }
 }
+@media screen and (width <= 630px) {
+    .info {
+        padding-bottom: 25rem;
+    }
+    .info-card__container {
+        bottom: -70%;
+    }
+    .info .btn {
+        width: 100%;
+        padding: 1.5rem;
+    }
+}
 @media screen and (width <= 600px) {
     .hero-img::after {
         display: none;
@@ -832,6 +872,7 @@ footer .socials-link i {
     .hero-content {
         width: 100%;
     }
+
 }
 @media screen and (width <= 500px) {
     .hero-content {
@@ -852,6 +893,9 @@ footer .socials-link i {
         width: 100%;
         padding-top: 1.2rem;
         padding-bottom: 1.2rem;
+    }
+    .section-title {
+        font-size: 3rem;
     }
 
 }
