--- a/undersound/style.css
+++ b/undersound/style.css
@@ -955,6 +955,24 @@ footer .socials-link i {
         margin: 0 auto;
         padding: 1.2rem 0;
     }
+
+    /* fixed navigation */
+    .hero {
+        margin-top: 10rem;
+    }
+    .navbar {
+        position: fixed;
+        width: 100%;
+        background-color: var(--bg-beige);
+        top: 0;
+        left: 0;
+        z-index: 10;
+        padding: 1rem;
+        height: 8.4rem;
+    }
+    .header-shadow {
+        box-shadow: 0 1px 5px rgba(0,0,0,.2);
+    }
 }
 @media screen and (width <= 750px) {
     .newsletter-users  * {
